components/counter/src/styles/counter-group.scss
// Copyright (c) Alaska Air. All right reserved. Licensed under the Apache-2.0 license.
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

// layout styles - define any layout specifications for UI that is contained WITHIN the component
// never define layout that would cause effect on element outside the scope of this component

// Support for fallback values
@import "@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables";
@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';

/* stylelint-disable no-descending-specificity, selector-max-attribute, selector-nest-combinators */

:host {
  position: relative;
  display: block;
}

[slot="trigger"], ::slotted([slot="valueText"]) {
  display: block;
  overflow: auto;
  text-overflow: ellipsis;
}

[auro-dropdown] {
  display: block;

  &::part(trigger) {
    max-height: var(--ds-size-300, $ds-size-300);
  }
}

